# zeta-network

./: .gitattributes  .gitignore  README.md  demo.html  test-relay.html
pythonanywhere/: README.md  app.py
pythonanywhere/static/css/: style.css
pythonanywhere/static/js/: app.js  ipfs-client.js
pythonanywhere/templates/: app.html  index.html  install.html
rust-node/: Cargo.toml  RELAY-SETUP.md  bootstrap.txt  install-client.sh  install-relay.sh  main.rs  web_server.rs
rust-node/static/: index.html
