[package]
name = "zeta-network"
version = "1.0.0"
edition = "2021"
authors = ["Théo Couerbe <CTHE0>"]
description = "Réseau social décentralisé P2P avec relais"
license = "MIT"

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "websocket", "noise", "yamux", "mdns", "kad", "gossipsub", "identify", "ping"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"