[package]
name = "zeta-network"
version = "1.0.0"
edition = "2021"
authors = ["Théo Couerbe <CTHE0>"]
description = "Réseau social décentralisé P2P"
license = "MIT"

[[bin]]
name = "zeta-relay"
path = "main.rs"

[dependencies]
# libp2p 0.51 - version stable
libp2p = { version = "0.51", features = [
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "tokio",
    "macros"
] }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true